// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-jphTSq dVlzRk"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-fZSDuZ hdiHkT"
    size="small"
  >
    <input
      checked={true}
      className="sc-jRZndg kGtBnK"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-kobgRX juHvyO"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
Array [
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ vIDVm"
      size="medium"
    >
      <input
        checked={true}
        className="sc-jRZndg kGtBnK"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX brxUrd"
        size="medium"
      >
        <span
          className="sc-dMuQbb fQMZlZ"
        >
          <p
            className="sc-hYufOg ddRnfV"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-hYufOg ddRnfV"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ gemENN"
      size="large"
    >
      <input
        checked={true}
        className="sc-jRZndg kGtBnK"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX brxUrd"
        size="large"
      >
        <span
          className="sc-dMuQbb fQMZlZ"
        >
          <p
            className="sc-hYufOg ddRnfV"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-hYufOg ddRnfV"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Switch renders Disabled state 1`] = `
Array [
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ hLDMJu"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-jRZndg kGtBnK"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX juHvyO"
        size="small"
      />
    </label>
  </div>,
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ hLDMJu"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-jRZndg kGtBnK"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-kobgRX jJRltm"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders Theme variant 1`] = `
Array [
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ hqjPpp"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-jRZndg ldLXHj"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX hnhdED"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ aBstG"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-jRZndg jvpGHP"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX NbBYc"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ hdiHkT"
      size="small"
    >
      <input
        checked={true}
        className="sc-jRZndg jvpGHP"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX dIGWrT"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders different Sizes 1`] = `
Array [
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ hqjPpp"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-jRZndg BXBpS"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX UtUDy"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ aBstG"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-jRZndg kGtBnK"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX bwBfSd"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-jphTSq dVlzRk"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fZSDuZ hdiHkT"
      size="small"
    >
      <input
        checked={true}
        className="sc-jRZndg kGtBnK"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-kobgRX juHvyO"
        size="small"
      />
    </label>
  </div>,
]
`;
